templates/featureform_template.yaml
---
# Source: featureform/charts/etcd/templates/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: featureform-etcd-headless
  namespace: "default"
  labels:
    app.kubernetes.io/name: etcd
    helm.sh/chart: etcd-8.2.4
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: client
      port: 2379
      targetPort: client
    - name: peer
      port: 2380
      targetPort: peer
  selector:
    app.kubernetes.io/name: etcd
    app.kubernetes.io/instance: release-name
---
# Source: featureform/charts/etcd/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: featureform-etcd
  namespace: "default"
  labels:
    app.kubernetes.io/name: etcd
    helm.sh/chart: etcd-8.2.4
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: "client"
      port: 2379
      targetPort: client
      nodePort: null
    - name: "peer"
      port: 2380
      targetPort: peer
      nodePort: null
  selector:
    app.kubernetes.io/name: etcd
    app.kubernetes.io/instance: release-name
---
# Source: featureform/charts/ingress-nginx/templates/controller-service-webhook.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    helm.sh/chart: ingress-nginx-4.1.0
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.2.0"
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: release-name-ingress-nginx-controller-admission
  namespace: default
spec:
  type: ClusterIP
  ports:
    - name: https-webhook
      port: 443
      targetPort: webhook
      appProtocol: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: controller
---
# Source: featureform/charts/ingress-nginx/templates/controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: "4000"
  labels:
    helm.sh/chart: ingress-nginx-4.1.0
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.2.0"
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: release-name-ingress-nginx-controller
  namespace: default
spec:
  type: LoadBalancer
  ipFamilyPolicy: SingleStack
  ipFamilies: 
    - IPv4
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
      appProtocol: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
      appProtocol: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: controller
---
# Source: featureform/charts/meilisearch/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: featureform-search
  labels:
    helm.sh/chart: meilisearch-0.1.49
    app.kubernetes.io/name: meilisearch
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v1.0.0"
    app.kubernetes.io/component: search-engine
    app.kubernetes.io/part-of: meilisearch
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 7700
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: meilisearch
    app.kubernetes.io/instance: release-name
---
# Source: featureform/templates/api-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: featureform-api-server
  labels:
    app: featureform-api-server
spec:
  ports:
    - port: 7878
      protocol: TCP
      targetPort: 7878
  type: ClusterIP
  selector:
    app: featureform-api-server
---
# Source: featureform/templates/coordinator/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: featureform-coordinator
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
---
# Source: featureform/templates/dashboard-metadata/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: featureform-dashboard-metadata
spec:
  type: ClusterIP
  selector:
    app: featureform-dashboard-metadata
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
      name: http
---
# Source: featureform/templates/dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: featureform-dashboard
spec:
  type: ClusterIP
  selector:
    app: featureform-dashboard
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
---
# Source: featureform/templates/feature-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: featureform-feature-server
spec:
  ports:
    - name: grpc
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: featureform-feature-server
---
# Source: featureform/templates/metadata/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: featureform-metadata-server
spec:
  ports:
    - name: grpc
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: featureform-metadata-server
---
# Source: featureform/templates/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: featureform-prometheus-service
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9090"

spec:
  selector:
    app: featureform-prometheus-server
  type: ClusterIP
  ports:
    - port: 9090
      targetPort: 9090
---
# Source: featureform/charts/ingress-nginx/templates/controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    helm.sh/chart: ingress-nginx-4.1.0
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.2.0"
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: release-name-ingress-nginx-controller
  namespace: default
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: controller
  replicas: 1
  revisionHistoryLimit: 10
  minReadySeconds: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ingress-nginx
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/component: controller
    spec:
      dnsPolicy: ClusterFirst
      containers:
        - name: controller
          image: "k8s.gcr.io/ingress-nginx/controller:v1.2.0@sha256:d8196e3bc1e72547c5dec66d6556c0ff92a23f6d0919b206be170bc90d5f9185"
          imagePullPolicy: IfNotPresent
          lifecycle: 
            preStop:
              exec:
                command:
                - /wait-shutdown
          args:
            - /nginx-ingress-controller
            - --publish-service=$(POD_NAMESPACE)/release-name-ingress-nginx-controller
            - --election-id=ingress-controller-leader
            - --controller-class=k8s.io/ingress-nginx
            - --ingress-class=nginx
            - --configmap=$(POD_NAMESPACE)/release-name-ingress-nginx-controller
            - --validating-webhook=:8443
            - --validating-webhook-certificate=/usr/local/certificates/cert
            - --validating-webhook-key=/usr/local/certificates/key
          securityContext: 
            capabilities:
              drop:
              - ALL
              add:
              - NET_BIND_SERVICE
            runAsUser: 101
            allowPrivilegeEscalation: true
          livenessProbe: 
            failureThreshold: 5
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe: 
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
            - name: https
              containerPort: 443
              protocol: TCP
            - name: webhook
              containerPort: 8443
              protocol: TCP
          volumeMounts:
            - name: webhook-cert
              mountPath: /usr/local/certificates/
              readOnly: true
          resources: 
            requests:
              cpu: 100m
              memory: 90Mi
      nodeSelector: 
        kubernetes.io/os: linux
      serviceAccountName: release-name-ingress-nginx
      terminationGracePeriodSeconds: 300
      volumes:
        - name: webhook-cert
          secret:
            secretName: release-name-ingress-nginx-admission
---
# Source: featureform/templates/api-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: featureform-api-server
    chart: featureform
  name: featureform-api-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: featureform-api-server
  strategy: {}
  template:
    metadata:
      labels:
        app: featureform-api-server
      
    spec:
      containers:
        - image: "featureformcom/api-server:0.12.5"
          imagePullPolicy: Always
          name: featureform-api-server
          ports:
            - containerPort: 7878
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /_ah/
              port: 8443
            initialDelaySeconds: 300
            periodSeconds: 3
---
# Source: featureform/templates/coordinator/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: featureform-coordinator
  labels:
    chart: featureform
spec:
  selector:
    matchLabels:
      chart: featureform
      app: featureform-coordinator
  template:
    metadata:
      labels:
        chart: featureform
        app: featureform-coordinator
      
    spec:
      serviceAccountName: ff-coordinator-sa

      containers:
        - name: "featureform-coordinator"
          image: "featureformcom/coordinator:0.12.5"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
#          livenessProbe:
#            httpGet:
#              path: /
#              port: http
#          readinessProbe:
#            httpGet:
#              path: /
#              port: http
          resources:
            limits:
              cpu: 1
            requests:
              cpu: 1
---
# Source: featureform/templates/dashboard-metadata/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: featureform-dashboard-metadata
  labels:
    chart: featureform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: featureform-dashboard-metadata
  template:
    metadata:
      labels:
        app: featureform-dashboard-metadata
      
    spec:
      serviceAccountName: ff-dashboard-metadata-sa
      containers:
        - name: featureform
          image: "featureformcom/metadata-dashboard:0.12.5"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3001
              protocol: TCP
#          livenessProbe:
#            httpGet:
#              path: /
#              port: http
#          readinessProbe:
#            httpGet:
#              path: /
#              port: http
          resources:
            limits:
              cpu: 1
            requests:
              cpu: 1
---
# Source: featureform/templates/dashboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: featureform-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: featureform-dashboard
  template:
    metadata:
      labels:
        chart: featureform
        app: featureform-dashboard
      
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: featureform-dashboard
          image: "featureformcom/dashboard:0.12.5"
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
# Source: featureform/templates/feature-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    chart: featureform
    run: featureform-feature-server
    app: featureform-feature-server
  name: featureform-feature-server
spec:
  replicas: 1
  selector:
    matchLabels:
      run: featureform-feature-server
      app: featureform-feature-server
  strategy: {}
  template:
    metadata:
      labels:
        chart: featureform
        run: featureform-feature-server
        app: featureform-feature-server
      
    spec:
      containers:
        - image: "featureformcom/serving:0.12.5"
          imagePullPolicy: Always
          name: featureform-feature-server
          ports:
            - containerPort: 8080
            - containerPort: 9090
---
# Source: featureform/templates/metadata/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    chart: featureform
    run: featureform-metadata-server
    app: featureform-metadata-server
  name: featureform-metadata-server
spec:
  replicas: 1
  selector:
    matchLabels:
      chart: featureform
      run: featureform-metadata-server
      app: featureform-metadata-server
  strategy: {}
  template:
    metadata:
      labels:
        chart: featureform
        run: featureform-metadata-server
        app: featureform-metadata-server
      
    spec:
      containers:
        - image: "featureformcom/metadata:0.12.5"
          name: featureform-metadata-server
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources: {}
---
# Source: featureform/templates/prometheus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: featureform-prometheus-deployment
  labels:
    app: featureform-prometheus-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: featureform-prometheus-server
  template:
    metadata:
      labels:
        app: featureform-prometheus-server
      
    spec:
      containers:
        - name: featureform-prometheus
          image: prom/prometheus
          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.path=/prometheus/"
            - "--web.route-prefix=/prometheus"
            - "--web.external-url=http://release-name-featureform.featureform.com/prometheus"
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: featureform-prometheus-config-volume
              mountPath: /etc/prometheus/
            - name: featureform-prometheus-storage-volume
              mountPath: /prometheus/
      volumes:
        - name: featureform-prometheus-config-volume
          configMap:
            defaultMode: 420
            name: featureform-prometheus-server-conf

        - name: featureform-prometheus-storage-volume
          emptyDir: {}
---
# Source: featureform/charts/etcd/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: featureform-etcd
  namespace: "default"
  labels:
    app.kubernetes.io/name: etcd
    helm.sh/chart: etcd-8.2.4
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: etcd
      app.kubernetes.io/instance: release-name
  serviceName: featureform-etcd-headless
  podManagementPolicy: Parallel
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: etcd
        helm.sh/chart: etcd-8.2.4
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
      annotations:
        checksum/token-secret: 0b8ca5f4cff501ef869ce6d4d1d3037c8d4c208839f2a70c5e088da863ef0d95
    spec:
      
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: etcd
                    app.kubernetes.io/instance: release-name
                namespaces:
                  - "default"
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
      serviceAccountName: "default"
      containers:
        - name: etcd
          image: docker.io/bitnami/etcd:3.5.4-debian-10-r25
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
          ports:
            - name: client
              containerPort: 2379
              protocol: TCP
            - name: peer
              containerPort: 2380
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - /opt/bitnami/scripts/etcd/healthcheck.sh
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            exec:
              command:
                - /opt/bitnami/scripts/etcd/healthcheck.sh
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          resources:
            limits: {}
            requests: {}
          volumeMounts:
            - name: data
              mountPath: /bitnami/etcd
            - name: etcd-jwt-token
              mountPath: /opt/bitnami/etcd/certs/token/
              readOnly: true
      volumes:
        - name: etcd-jwt-token
          secret:
            secretName: featureform-etcd-jwt-token
            defaultMode: 256
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "8Gi"
---
# Source: featureform/charts/meilisearch/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: featureform-search
  labels:
    helm.sh/chart: meilisearch-0.1.49
    app.kubernetes.io/name: meilisearch
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v1.0.0"
    app.kubernetes.io/component: search-engine
    app.kubernetes.io/part-of: meilisearch
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  serviceName: featureform-search
  selector:
    matchLabels:
      app.kubernetes.io/name: meilisearch
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        helm.sh/chart: meilisearch-0.1.49
        app.kubernetes.io/name: meilisearch
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/version: "v1.0.0"
        app.kubernetes.io/component: search-engine
        app.kubernetes.io/part-of: meilisearch
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: featureform-search
      containers:
        - name: meilisearch
          image: "getmeili/meilisearch:v1.0.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7700
              protocol: TCP
          startupProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 1
            initialDelaySeconds: 1
            failureThreshold: 60
          livenessProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 10
            initialDelaySeconds: 0
          readinessProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 10
            initialDelaySeconds: 0
          resources:
            {}
---
# Source: featureform/charts/ingress-nginx/templates/controller-ingressclass.yaml
# We don't support namespaced ingressClass yet
# So a ClusterRole and a ClusterRoleBinding is required
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    helm.sh/chart: ingress-nginx-4.1.0
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.2.0"
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
# Source: featureform/templates/ingress/grpc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    allowed-values: CN=client
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "false"
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
    nginx.ingress.kubernetes.io/backend-protocol: GRPC
    nginx.ingress.kubernetes.io/proxy-body-size: 64ms
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/server-snippet: "grpc_read_timeout 3600s; grpc_send_timeout 3600s; client_body_timeout 3600s;"
    cert-manager.io/issuer: letsencrypt-prod
    
    kots.io/exclude: "true"
    
  name: grpc-ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /featureform.serving.metadata.proto.Api/
            pathType: Prefix
            backend:
              service:
                name: featureform-api-server
                port:
                  number: 7878

          - path: /featureform.serving.proto.Feature/
            pathType: Prefix
            backend:
              service:
                name: featureform-api-server
                port:
                  number: 7878



  tls:
    - hosts:
        -  localhost
      secretName: featureform-ca-secret
---
# Source: featureform/templates/ingress/http-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    allowed-values: CN=client
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/proxy-body-size: 64ms
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/issuer: letsencrypt-prod
    
    kots.io/exclude: "true"
    
  name: http-ingress
spec:
  defaultBackend:
    service:
      name: featureform-dashboard
      port:
        number: 80
  rules:
    - host: localhost
      http:
        paths:
          - path: /data/
            pathType: Prefix
            backend:
              service:
                name: featureform-dashboard-metadata
                port:
                  number: 3001
          - path: /search/
            pathType: Prefix
            backend:
              service:
                name: featureform-dashboard-metadata
                port:
                  number: 3001
          - path: /prometheus/
            pathType: Prefix
            backend:
              service:
                name: featureform-prometheus-service
                port:
                  number: 9090
          - path: /
            pathType: Prefix
            backend:
              service:
                name: featureform-dashboard
                port:
                  number: 80
---
# Source: featureform/charts/ingress-nginx/templates/admission-webhooks/validating-webhook.yaml
# before changing this value, check the required kubernetes version
# https://kubernetes.io/docs/reference/access-authn-authz/extensible-admission-controllers/#prerequisites
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    helm.sh/chart: ingress-nginx-4.1.0
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.2.0"
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: admission-webhook
  name: release-name-ingress-nginx-admission
webhooks:
  - name: validate.nginx.ingress.kubernetes.io
    matchPolicy: Equivalent
    rules:
      - apiGroups:
          - networking.k8s.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - ingresses
    failurePolicy: Fail
    sideEffects: None
    admissionReviewVersions:
      - v1
    clientConfig:
      service:
        namespace: "default"
        name: release-name-ingress-nginx-controller-admission
        path: /networking/v1/ingresses
---
# Source: featureform/charts/meilisearch/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: featureform-search-test-connection
  labels:
    app.kubernetes.io/name: meilisearch
    helm.sh/chart: meilisearch-0.1.49
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args:  ['featureform-search:7700']
  restartPolicy: Never
---
# Source: featureform/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-featureform-test-connection"
  labels:
    helm.sh/chart: featureform-0.12.5
    app.kubernetes.io/name: featureform
    app.kubernetes.io/instance: featureform
    app.kubernetes.io/version: "0.12.5"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['release-name-featureform:3001']
  restartPolicy: Never
